# MIPT_2024_TP_bank_system

./: .gitignore  Account.cpp  Account.h  AccountManage.cpp  AccountManage.h  AddBankForm.cpp  AddBankForm.h  AddBankWindow.cpp  AddBankWindow.h  AddClientForm.cpp  AddClientForm.h  AddClientWindow.cpp  AddClientWindow.h  AddTransactionForm.cpp  AddTransactionForm.h  AddTransactionWindow.cpp  AddTransactionWindow.h  BankInterface.cpp  BankInterface.h  BankMenu.cpp  BankMenu.h  CMakeLists.txt  Client.cpp  Client.h  Command.cpp  Command.h  CustomError.cpp  CustomError.h  FirstWindow.cpp  FirstWindow.h  MainWindow.cpp  MainWindow.h  README.md  SecondWindow.cpp  SecondWindow.h  dialog.cpp  dialog.h  main.cpp  oldMain.cpp  tests
